src/components/GameBoard/styles.css
.gameboard {
  display: block;
  height: 100%;
  overflow-y: auto;
  padding-bottom: 6rem;
}

.gameboard ol {
  list-style: none;
  padding: 0;
  --hue: 1;
  --unit: 1rem;
}

.gameboard li {
  --height: 6rem;
  position: relative;
  display: block;
  background-color: hsl(calc(var(--hue)*360/20), 90%, 35%);
  border-color: hsl(calc(var(--hue)*360/20), 90%, 35%);
  padding: 0.75rem;
  margin: 2rem 1rem;
  border-radius: 0.2rem;
}

.gameboard li.gray-tiles {
  background-color: rgba(75, 75, 75, 0.75);
  border-color: rgba(75, 75, 75, 0.75);
}

.gameboard li .pop-text {
  text-shadow:
  -1px 0px 0px black,
  1px 0px 0px black,
  0px -1px 0px black,
  0px 1px 0px black;
}

.gameboard li::before {
  content: "";
  background-color: inherit;
  position: absolute;
  display: block;
  width: var(--unit);
  height: var(--unit);
  top: 100%;
  left: calc(50% - (var(--unit)/2));
}

.gameboard li::after {
  content: "";
  position: absolute;
  display: block;
  top: calc(100% + var(--unit));
  left: calc(50% - (var(--unit)));
  border: var(--unit) solid transparent;
  border-top-color: inherit;
}

.gameboard li:last-child::before,
.gameboard li:last-child::after {
  content: none;
}

.gameboard li:nth-child(20n+1) {
  --hue: 1;
}

.gameboard li:nth-child(20n+2) {
  --hue: 2;
}

.gameboard li:nth-child(20n+3) {
  --hue: 3;
}

.gameboard li:nth-child(20n+4) {
  --hue: 4;
}

.gameboard li:nth-child(20n+5) {
  --hue: 5;
}

.gameboard li:nth-child(20n+6) {
  --hue: 6;
}

.gameboard li:nth-child(20n+7) {
  --hue: 7;
}

.gameboard li:nth-child(20n+8) {
  --hue: 8;
}

.gameboard li:nth-child(20n+9) {
  --hue: 9;
}

.gameboard li:nth-child(20n+10) {
  --hue: 10;
}

.gameboard li:nth-child(20n+11) {
  --hue: 11;
}

.gameboard li:nth-child(20n+12) {
  --hue: 12;
}

.gameboard li:nth-child(20n+13) {
  --hue: 13;
}

.gameboard li:nth-child(20n+14) {
  --hue: 14;
}

.gameboard li:nth-child(20n+15) {
  --hue: 15;
}

.gameboard li:nth-child(20n+16) {
  --hue: 16;
}

.gameboard li:nth-child(20n+17) {
  --hue: 17;
}

.gameboard li:nth-child(20n+18) {
  --hue: 18;
}

.gameboard li:nth-child(20n+19) {
  --hue: 19;
}

.gameboard li:nth-child(20n+20) {
  --hue: 20;
}

@media (min-width: 820px) and (max-width: 1019px) {
  .gameboard li {
    margin: 1rem;
    width: calc(50% - 2rem);
    float: left;
    min-height: 11rem;
  }

  .gameboard li:nth-child(4n+3),
  .gameboard li:nth-child(4n+4) {
    float: right;
  }

  .gameboard li:nth-child(4n+1)::before {
    top: calc(var(--height)/2 + var(--unit)/2);
    left: 100%;
  }

  .gameboard li:nth-child(4n+1)::after {
    top: calc(var(--height)/2);
    left: calc(100% + (var(--unit)));
    border: var(--unit) solid transparent;
    border-left-color: inherit;
  }

  .gameboard li:nth-child(4n+3)::before {
    top: calc(var(--height)/2 + var(--unit)/2);
    left: -1rem;
  }

  .gameboard li:nth-child(4n+3)::after {
    top: calc(var(--height)/2);
    left: -3rem;
    border: var(--unit) solid transparent;
    border-right-color: inherit;
  }
}

@media (min-width: 1020px) and (max-width: 1249px) {
  .gameboard li {
    margin: 1rem;
    width: calc(33% - 2rem);
    float: left;
    min-height: 12rem
  }

  .gameboard li:nth-child(6n+4),
  .gameboard li:nth-child(6n+5),
  .gameboard li:nth-child(6n+6) {
    float: right;
  }

  .gameboard li:nth-child(6n+1)::before,
  .gameboard li:nth-child(6n+2)::before {
    top: calc(var(--height)/2 + var(--unit)/2);
    left: 100%;
  }

  .gameboard li:nth-child(6n+1)::after,
  .gameboard li:nth-child(6n+2)::after {
    top: calc(var(--height)/2);
    left: calc(100% + (var(--unit)));
    border: var(--unit) solid transparent;
    border-left-color: inherit;
  }

  .gameboard li:nth-child(6n+4)::before,
  .gameboard li:nth-child(6n+5)::before {
    top: calc(var(--height)/2 + var(--unit)/2);
    left: -1rem;
  }

  .gameboard li:nth-child(6n+4)::after,
  .gameboard li:nth-child(6n+5)::after {
    top: calc(var(--height)/2);
    left: -3rem;
    border: var(--unit) solid transparent;
    border-right-color: inherit;
  }
}

@media (min-width: 1250px) and (max-width: 1549px) {
  .gameboard li {
    margin: 1rem;
    width: calc(25% - 2rem);
    float: left;
    min-height: 12rem
  }

  .gameboard li:nth-child(8n+5),
  .gameboard li:nth-child(8n+6),
  .gameboard li:nth-child(8n+7),
  .gameboard li:nth-child(8n+8) {
    float: right;
  }

  .gameboard li:nth-child(8n+1)::before,
  .gameboard li:nth-child(8n+2)::before,
  .gameboard li:nth-child(8n+3)::before {
    top: calc(var(--height)/2 + var(--unit)/2);
    left: 100%;
  }

  .gameboard li:nth-child(8n+1)::after,
  .gameboard li:nth-child(8n+2)::after,
  .gameboard li:nth-child(8n+3)::after {
    top: calc(var(--height)/2);
    left: calc(100% + (var(--unit)));
    border: var(--unit) solid transparent;
    border-left-color: inherit;
  }

  .gameboard li:nth-child(8n+5)::before,
  .gameboard li:nth-child(8n+6)::before,
  .gameboard li:nth-child(8n+7)::before {
    top: calc(var(--height)/2 + var(--unit)/2);
    left: -1rem;
  }

  .gameboard li:nth-child(8n+5)::after,
  .gameboard li:nth-child(8n+6)::after,
  .gameboard li:nth-child(8n+7)::after {
    top: calc(var(--height)/2);
    left: -3rem;
    border: var(--unit) solid transparent;
    border-right-color: inherit;
  }
}

@media (min-width: 1550px) {
  .gameboard ol {
    max-width: 1600px;
    margin: 0 auto;
  }

  .gameboard li {
    margin: 1rem;
    width: calc(100%/6 - 2rem);
    float: left;
    min-height: 12rem
  }

  .gameboard li:nth-child(12n+7),
  .gameboard li:nth-child(12n+8),
  .gameboard li:nth-child(12n+9),
  .gameboard li:nth-child(12n+10),
  .gameboard li:nth-child(12n+11),
  .gameboard li:nth-child(12n+12) {
    float: right;
  }

  .gameboard li:nth-child(12n+1)::before,
  .gameboard li:nth-child(12n+2)::before,
  .gameboard li:nth-child(12n+3)::before,
  .gameboard li:nth-child(12n+4)::before,
  .gameboard li:nth-child(12n+5)::before {
    top: calc(var(--height)/2 + var(--unit)/2);
    left: 100%;
  }

  .gameboard li:nth-child(12n+1)::after,
  .gameboard li:nth-child(12n+2)::after,
  .gameboard li:nth-child(12n+3)::after,
  .gameboard li:nth-child(12n+4)::after,
  .gameboard li:nth-child(12n+5)::after {
    top: calc(var(--height)/2);
    left: calc(100% + (var(--unit)));
    border: var(--unit) solid transparent;
    border-left-color: inherit;
  }

  .gameboard li:nth-child(12n+7)::before,
  .gameboard li:nth-child(12n+8)::before,
  .gameboard li:nth-child(12n+9)::before,
  .gameboard li:nth-child(12n+10)::before,
  .gameboard li:nth-child(12n+11)::before {
    top: calc(var(--height)/2 + var(--unit)/2);
    left: -1rem;
  }

  .gameboard li:nth-child(12n+7)::after,
  .gameboard li:nth-child(12n+8)::after,
  .gameboard li:nth-child(12n+9)::after,
  .gameboard li:nth-child(12n+10)::after,
  .gameboard li:nth-child(12n+11)::after {
    top: calc(var(--height)/2);
    left: -3rem;
    border: var(--unit) solid transparent;
    border-right-color: inherit;
  }
}

